--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@coreui/coreui-free-react-admin-template",
+  "homepage": "https://ladywafer.github.io/CoreUIReact",
   "version": "3.0.0",
   "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
   "author": {
@@ -14,7 +15,6 @@
       "url": "https://github.com/orgs/coreui/people"
     }
   ],
-  "homepage": ".",
   "copyright": "Copyright 2017-2020 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "private": true,
@@ -35,6 +35,7 @@
     "core-js": "^3.6.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -53,7 +54,9 @@
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
